# serverless_lambda_http_api

./: .env.local  .env.localstack  .gitignore  .pre-commit-config.yaml  .style.yapf  README.md  package-lock.json  package.json  prepare_environment.sh  pyproject.toml  requirements.txt  ruff.toml  serverless.yml
.github/workflows/: prep.yml
app/: api.py  constants.py  encoder.py  responses.py
aws-localstack/: docker-compose.yml
aws-localstack/postgres_init/: init_db.sql
handlers/: endpoints.yml  not_found.yml
initial_scripts/: prepare_action_environment.sh  prepare_local_environment.sh
initial_sql/: prepare_database.sql  prepare_db.sql
postgres_init/: init_db.sql
resources/: endpoints.yml  python_dependencies.yml
src/api/: api.py  database.py  errors.py  responses.py
src/app/: api.py  database.py  encoder.py
