[tool.poetry]
name = "python-assignment"
version = "0.1.0"
description = ""
authors = ["Hasan Özdemir <hasann.ozdemirr58@gmail.com>"]
readme = "README.md"
packages = [{include = "python_assignment"}]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"
localstack = "^1.3.1"
fastapi = "^0.89.1"
pydantic = "^1.10.4"

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple/"
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
