[tool.poetry]
name = "Python HTTP API"
version = "0.1.0"
description = "Serverless Framework Python HTTP API on AWS"
authors = [
    "Hasan Ozdemir <hasanozdemir1@trakya.edu.tr>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2-binary = "^2.9.5"
localstack = "^1.3.1"
fastapi = "^0.89.1"
pydantic = "^1.10.4"
pre-commit = "^2.21.0"

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple/"
secondary = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
